@@ -94,6 +94,10 @@ Note: This is a change to what is displayed and the entries are not updated to p
 <table>
 <tbody>
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3514819);return false;">3514819</a></td>
+<td>Add Group now works again.</td>
+</tr>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3510590);return false;">3510590</a></td>
 <td>Password History is now correctly repaired if found in error during
 the automatic Validate on database open.</td>
