@@ -22,6 +22,7 @@ None
 
 Bugs fixed in 3.28.1
 ====================
+[3514819] Add Group now works again.
 [3510590] Password History is now correctly repaired if found in error during
 the automatic Validate on database open.
 [3508891] Editing an entry's Notes using an external editor no longer adds blank lines
